# hyprland-plugins

./: README.md
hyprlid/: CMakeLists.txt  Makefile  README.md  main.cpp  meson.build
